--- a/XdHtml/kLines.html
+++ b/XdHtml/kLines.html
@@ -14,7 +14,7 @@
  
 <script>   
 function _showClass(ta){
-	var _v	= "_showClass_v0.0.64";
+	var _v	= "_showClass_v0.0.71";
 	var _ta = ta;
 	var _jg = null;
 	var _divMouse = null;
@@ -93,8 +93,6 @@ function _showClass(ta){
 		yMax = y3;
 		xMin = x3;
 					this.clear();
-					this.setColor("blue"); 
-					this.fillRect(0,0,100,100); 
 
 					this.setColor("green");  
 					this.drawLine(x1,y1,x2,y2);
@@ -173,6 +171,12 @@ function _showClass(ta){
 		_divShow.h2.innerHTML = coor;
 		_showMouse(c.x,c.y);
 	};	 
+	div4jg.onmouseout = function(){ 
+		if(_divMouse!=null){
+				var jgLine = _divMouse.jg;
+				jgLine.clear();
+		}
+	};	 
 	this.mainDiv   = _divShow;
 	this.blhUpdate = function(x1,y1,x2,y2){ 
 					
@@ -216,7 +220,7 @@ function _YearsClass(o){
 		};
 		_on_off_div(b,d);
 	};
-	this.bll1				= "_YearsClass: v0.0.141";
+	this.bll1				= "_YearsClass: v0.0.143";
 	this.blrShow	= function(b,d){ 
 		if(_showDiv==null){
 			_showDiv = new _showClass(_ta);
@@ -226,17 +230,17 @@ function _YearsClass(o){
 	} 
 	this.blrSet1	= function(b,d){ 
 		if(_showDiv!=null){
-			_showDiv.blhUpdate(10,10,400,300);			 
+			_showDiv.blhUpdate(0,33,400,300);			 
 		} 
 	} 
 	this.blrSet2	= function(b,d){ 
 		if(_showDiv!=null){
-			_showDiv.blhUpdate(100,100,500,400);			 
+			_showDiv.blhUpdate(0,33,600,400);			 
 		} 
 	} 
 	this.blrSet3	= function(b,d){ 
 		if(_showDiv!=null){
-			_showDiv.blhUpdate(11,11,1100,1000);			 
+			_showDiv.blhUpdate(0,33,800,600);			 
 		} 
 	} 
 }
@@ -247,7 +251,7 @@ function _blKinesClass(){
 	var _divDays = null;
 	var _jgY		= null;
 	var _me			= this;
-	this.classV		= "v0.0.152"; 
+	this.classV		= "v0.0.154"; 
 	
 	this.blrYear	= function(b,d){ 
 		if(_yearObj==null){ 
