--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -1,66 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head> 
-<style>
-body {margin:0;}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
+<head><title>index</title>
+  <script src="blclass.js"  type="text/javascript" ></script>
+  <style>
+  body {margin:0;}
+  .topnav {    overflow: hidden;	  background-color: #333;}
+  .topnav a {  float: left;  display: block;  color: #f2f2f2;  text-align: center;  padding: 14px 16px;
+    text-decoration: none;  font-size: 17px;}
+  .topnav a:hover {  background-color: #ddd;  color: black;}
+  .active {  background-color: #4CAF50;  color: white;}
+  .topnav .icon {  display: none;}
+  @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
+    }
   }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+   }
+  .topnav.responsive a {    float: none;    display: block;    text-align: left;  }
 }
 </style>
 </head>
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="?v=" class="active">v0.0.65</a> 
+  <a href="?v=" class="active">v0.0.74</a> 
   <a href="index2.html">index2</a>
   <a href="index1.html">index1</a>
   <a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a>
@@ -81,6 +52,29 @@ function myFunction() {
         x.className = "topnav";
     }
 }
+function _myClass() {
+    this.v = "_myClass: v0.0.7";
+	this.blrAboutMe = function(b,d){		
+		var s = "";
+		s += "<a target='_blank' href='https://github.com/littleflute/vc6/edit/master/XdHtml/index.html'"
+		s += " style='color:lightblue;'";
+		s +=">";
+		s += " upate  ";
+		s += "</a>"; 
+		s += "<a target='_blank' href='https://littleflute.github.io/vc6/XdHtml/'"
+		s += " style='color:yellow;'";
+		s +=">";
+		s += " view ";
+		s += "</a>"; 
+		d.innerHTML = s;
+		_on_off_div(b,d);
+	}
+}
+var co = new _myClass;
+blo0.blDiv(document.body,"ui","ui",blColor[0]);
+blo0.blhInitUI(ui);
+blo0.blDiv(document.body,"id_myClass","_myClass",blColor[1]);
+blo0.blShowObj2Div(id_myClass,co);
 </script>
 
 </body>
