--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -31,7 +31,7 @@
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="?v=" class="active">v0.0.74</a> 
+  <a href="?v=" class="active">v0.0.75</a> 
   <a href="index2.html">index2</a>
   <a href="index1.html">index1</a>
   <a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a>
@@ -75,6 +75,7 @@ blo0.blDiv(document.body,"ui","ui",blColor[0]);
 blo0.blhInitUI(ui);
 blo0.blDiv(document.body,"id_myClass","_myClass",blColor[1]);
 blo0.blShowObj2Div(id_myClass,co);
+blrAboutMe.click();
 </script>
 
 </body>
