--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><title>index</title>
+<link rel="icon" href="favicon1.png" type="image/x-icon">
+
   <script src="blclass.js"  type="text/javascript" ></script>
   <style>
   body {margin:0;}
@@ -31,7 +33,7 @@
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="?v=" class="active">v0.0.75</a> 
+  <a href="?v=" class="active">v0.0.76</a> 
   <a href="index2.html">index2</a>
   <a href="index1.html">index1</a>
   <a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a>
