--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -2,9 +2,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>   
+<title>index2</title>
+<link rel="icon" href="favicon1.png" type="image/x-icon">
 <META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>index.html</title>
 <style>
 html,body,dl,dt,dd,ul,li,h1,h2,P,a,img {margin:0;padding:0;border:none;list-style:none;}
 body {font: 12px;color:#333;background:#001111 repeat-y center 0;}
@@ -33,7 +34,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="?v=">v0.0.78</a>
+    <li><a href="?v=">v0.0.81</a>
     </li>
     
     <li><a>projects</a>
@@ -147,7 +148,7 @@ a:hover {color:#C60;text-decoration: underline;}
 		<li><a>release</a>
           <ul>
             <li><a href="https://littleflute.github.io/beautifullover.org/">github</a></li>  
-            <li><a target="_blank"  href="http://www.beautifullover.org">beautifullover.org</a></li>  
+            <li><a href="http://www.beautifullover.org">beautifullover.org</a></li>  
             <li><a target="_blank"  href="http://git.oschina.net/littleflute/BeautifulLover">oschina Prj Home</a></li>  
             <li><a target="_blank"  href="http://littleflute.oschina.io/beautifullover">oschina Pages Home</a></li>  
           </ul>        
