--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -6,6 +6,7 @@
 <link rel="icon" href="favicon1.png" type="image/x-icon">
 <META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
 <style>
 html,body,dl,dt,dd,ul,li,h1,h2,P,a,img {margin:0;padding:0;border:none;list-style:none;}
 body {font: 12px;color:#333;background:#001111 repeat-y center 0;}
@@ -34,7 +35,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="?v=">v0.0.82</a>
+    <li><a href="?v=">v0.0.83</a>
     </li>
     
     <li><a>projects</a>
