--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -35,7 +35,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="?v=">v0.0.83</a>
+    <li><a href="?v=">v0.0.84</a>
     </li>
     
     <li><a>projects</a>
@@ -169,6 +169,7 @@ function _blLoad()
 		var c = bl$("id_div_plx__blDesignClass");
 		if(c) c.style.display = "block";
 	};
+	bl$("id_plx_design").click();
 }
 var menuids=["treemenu1"] 
 function buildsubmenus_horizontal()
