--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -35,7 +35,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="?v=">v0.0.84</a>
+    <li><a href="?v=">v0.0.85</a>
     </li>
     
     <li><a>projects</a>
@@ -159,7 +159,7 @@ a:hover {color:#C60;text-decoration: underline;}
 </body>
 </html>
 <script type="text/javascript">
-this.blFunListPath = "https://littleflute.github.io/vc6/XdHtml/";
+this.blFunListPath = "";//https://littleflute.github.io/vc6/XdHtml/";
 var blPath	= "";//"https://littleflute.github.io/vc6/XdHtml/";
 function _blLoad()
 {
