--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -35,7 +35,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="?v=">v0.0.88</a>
+    <li><a href="?v=">v0.0.90</a>
     </li>
     
     <li><a>projects</a>
@@ -172,6 +172,10 @@ function _blLoad()
 	};
 	bl$("id_plx_blclass").onclick = function(){
 		var d = blo0.blMDiv(document.body,"id_div_plx_blclass","id_div_plx_blclass",150,150,500,200,blColor[1]);
+		blo0.blhInitUI(d);
+		var b2			= blo0.blBtn(d,d.id + "b2","[X]",blColor[8]);
+		b2.onclick		= function(this_){	return function(){this_.click();}	}(this);
+
 		_on_off_div(this,d);
 	};
 	bl$("id_plx_design").click();
