--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -35,7 +35,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="?v=">v0.0.90</a>
+    <li><a href="?v=">v0.0.92</a>
     </li>
     
     <li><a>projects</a>
@@ -60,6 +60,8 @@ a:hover {color:#C60;text-decoration: underline;}
               <li><a href="https://littleflute.github.io/blog/">blog</a></li>     
               <li><a href="https://littleflute.github.io/xd/">xd</a></li>        
               <li><a href="https://littleflute.github.io/chess/">chess</a></li>   
+              <li><a href="http://littleflute.github.io/vextab/">vextab</a></li>   
+              <li><a target="_blank" href="https://github.com/littleflute/vexflow">vexflow</a></li>   
               <li><a href="https://www.w3schools.com/w3css/tryw3css_templates_blog.html">test</a></li>           
             </ul>
         </li>
@@ -68,9 +70,9 @@ a:hover {color:#C60;text-decoration: underline;}
         <li><a target="_blank" href="http://git.oschina.net/hjhy/weixin">weixin</a>
             <ul>
               <li><a target="_blank"  href="http://mp.weixin.qq.com">mp.weixin.qq.com</a></li>   
-              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/1">Æ¯²´ÕßÀÖÔ°¹«ÖÚºÅ</a></li>  
-              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/2">ºìÖÐ22°à¹«ÖÚºÅ</a></li> 
-              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/3">µÑÉùàÚÁÁ¹«ÖÚºÅ</a></li>  
+              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/1">漂泊者乐园公众号</a></li>  
+              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/2">红中22班公众号</a></li> 
+              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/3">笛声嘹亮公众号</a></li>  
               
             </ul>
         </li>
@@ -106,22 +108,22 @@ a:hover {color:#C60;text-decoration: underline;}
             <li><a target="_blank" href="http://mail.163.com">mail.163.com</a></li> 
           </ul>
         </li>
-        <li><a target="_blank"  href="http://www.taobao.com">¹ºÎï</a>
+        <li><a target="_blank"  href="http://www.taobao.com">购物</a>
           <ul>
-            <li><a target="_blank"  href="http://shop35351121.taobao.com">É½¹È·çÌÔ±¦µê</a></li>
-            <li><a target="_blank" href="http://www.taobao.com">ÌÔ±¦Ö÷Ò³</a></li>   
+            <li><a target="_blank"  href="http://shop35351121.taobao.com">山谷风淘宝店</a></li>
+            <li><a target="_blank" href="http://www.taobao.com">淘宝主页</a></li>   
           </ul>
         </li>
-        <li><a target="_blank"  href="http://v.qq.com">ÊÓÆµÍøÕ¾</a>
+        <li><a target="_blank"  href="http://v.qq.com">视频网站</a>
           <ul>
-            <li><a target="_blank"  href="http://v.qq.com">ÌÚÑ¶ÊÓÆµ</a></li>
-            <li><a target="_blank" href="http://www.youku.com">ÓÅ¿á</a></li>  
+            <li><a target="_blank"  href="http://v.qq.com">腾讯视频</a></li>
+            <li><a target="_blank" href="http://www.youku.com">优酷</a></li>  
             <li><a target="_blank" href="http://www.youtube.com">youtube</a></li>   
           </ul>
         </li>
-        <li><a target="_blank"  href="http://v.qq.com">ÔÚÏß¹¤¾ß</a>
+        <li><a target="_blank"  href="http://v.qq.com">在线工具</a>
           <ul>
-            <li><a target="_blank"  href="http://sandbox.runjs.cn/show/zqwuwbil">ÔÚÏßÎå±Ê</a></li>   
+            <li><a target="_blank"  href="http://sandbox.runjs.cn/show/zqwuwbil">在线五笔</a></li>   
             <li><a target="_blank" href="http://www.runjs.cn">runjs.cn</a></li>  
             <li><a target="_blank" href="http://www.slpl.org">slpl.org</a></li>   
           </ul>
