--- a/XdHtml/lyric.html
+++ b/XdHtml/lyric.html
@@ -6,10 +6,13 @@
 <script type="text/javascript" src="blclass.js"></script>
 </HEAD><BODY>
 <div id="pageLevel" style="display:none">0</div>
-<div id = "idDivBlV" style="display:none;">v0.0.72</div>
+<div id = "idDivBlV" style="display:none;">
+	<a target='_blank' href='https://github.com/littleflute/vc6/edit/master/XdHtml/lyric.html' style='color:lightblue;'>v0.0.75*</a>
+</div>
 <div id="xddbg"></div><div id="idMedia"></div> 
 <script src="xd.js" type="text/javascript" ></script>
 <div id="Nav"> 
+		
 ref:<br>
 <a id = "myHref" href="?j=" style="display:none;" ">s1_lrc_1.js</a>
 <select id="myList" onchange="ChangeMyList()"> 
