--- a/XdHtml/lyric.html
+++ b/XdHtml/lyric.html
@@ -7,7 +7,7 @@
 </HEAD><BODY>
 <div id="pageLevel" style="display:none">0</div>
 <div id = "idDivBlV" style="display:none;">
-	<a target='_blank' href='https://github.com/littleflute/vc6/edit/master/XdHtml/lyric.html' style='color:lightblue;'>v0.0.75*</a>
+	<a target='_blank' href='https://github.com/littleflute/vc6/edit/master/XdHtml/lyric.html' style='color:lightblue;'>v0.0.76*</a>
 </div>
 <div id="xddbg"></div><div id="idMedia"></div> 
 <script src="xd.js" type="text/javascript" ></script>
@@ -30,8 +30,8 @@ carsAndModels['s_lrc_1'] = ['V70', 'XC60', 'XC90'];
 carsAndModels['s_lrc_2'] = ['Golf', 'Polo', 'Scirocco', 'Touareg'];
 carsAndModels['s_lrc_3'] = ['M6', 'X5', 'Z3'];
 
-var listPath = "?j=file:///C:/Users/13699/xd/js/list/";
-//var listPath = "?j=https://littleflute.github.io/xd/js/list/";
+//var listPath = "?j=file:///C:/Users/13699/xd/js/list/";
+var listPath = "?j=https://littleflute.github.io/xd/js/list/";
 var myHref	= document.getElementById("myHref");
 var mList = document.getElementById("myList");
 
