--- a/XdHtml/2.html
+++ b/XdHtml/2.html
@@ -4,9 +4,10 @@
 <script src="blclass.js"></script> 
 
 <script>  
+
 function CXdMainFrame()
 {
-	this.v		= "v0.0.122 ";  
+	this.v		= "v0.0.135 ";  
 	var s = this.v;
 		s += "<a target='_blank' href='https://github.com/littleflute/vc6/edit/master/XdHtml/2.html'"
 		s += " style='color:lightblue;'";
@@ -18,10 +19,16 @@ function CXdMainFrame()
 		s +=">";
 		s += " 2.html ";
 		s += "</a>"; 
-	var d 	= blo0.blMDiv(document.body,"id_div_CXdMainFrame_ui",s,0,0,300,100,blColor[1]);
+		s += "<a href='index.html'";
+		s += " style='color:green;'";
+		s +=">";
+		s += " index.html ";
+		s += "</a>"; 
+	var d 	= blo0.blMDiv(document.body,"id_div_CXdMainFrame_ui",s,0,0,800,100,blColor[1]);
 	d.d1	= blo0.blDiv(d,d.id+"d1","d1",blColor[0]);	blo0.blhInitUI(d.d1); 	   
 	d.d2	= blo0.blDiv(d,d.id+"d2","d2",blColor[1]);	
 
+	_load_plx_btn(blo0,d.d2,"_xdPlxSpiter","https://littleflute.github.io/xd/js/plx/xdPlxSpiter.js","lightblue"); 
 
 }
 function CXdAPP()
