--- a/XdHtml/2.html
+++ b/XdHtml/2.html
@@ -7,7 +7,7 @@
 
 function CXdMainFrame()
 {
-	this.v		= "v0.0.135 ";  
+	this.v		= "v0.0.144 ";  
 	var s = this.v;
 		s += "<a target='_blank' href='https://github.com/littleflute/vc6/edit/master/XdHtml/2.html'"
 		s += " style='color:lightblue;'";
@@ -29,6 +29,7 @@ function CXdMainFrame()
 	d.d2	= blo0.blDiv(d,d.id+"d2","d2",blColor[1]);	
 
 	_load_plx_btn(blo0,d.d2,"_xdPlxSpiter","https://littleflute.github.io/xd/js/plx/xdPlxSpiter.js","lightblue"); 
+//	_load_plx_btn(blo0,d.d2,"_xdPlxSpiter","file:///C:/Users/13699/xd/js/plx/xdPlxSpiter.js","brown"); 
 
 }
 function CXdAPP()
