--- a/XdHtml/cchess/xdBoard.html
+++ b/XdHtml/cchess/xdBoard.html
@@ -1,4 +1,4 @@
-
+       
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=gb_2312-80" />
@@ -13,7 +13,7 @@
   </head>
  <body>
     <div id = "xdMainDiv" style="border:1px green solid;">
-	<a href="?xd=0">V0.0.130</a>
+	<a href="?xd=0">V0.0.131</a>
 	<a href="../index.html">[..]</a>
 	<a href="./index.html">[chess]</a>
 	<a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/cchess/xdBoard.html">github*</a>
@@ -143,7 +143,7 @@ function moveList_change() {
   board.flushBoard();
 }
 function _CtrlClass(){
-	var v = "v0.0.124";
+	var v = "v0.0.131";
 	var _myPuJSWrap = null;
 	var _xdPuJSWrap = null;
 	var _myMsgWrap = null;
@@ -236,7 +236,7 @@ function _CtrlClass(){
 	};
 	this.blrLoadPuJS = function(b,d){  
 		if(_myPuJSWrap==null){
-			_myPuJSWrap = blo0.blMDiv(document.body,"id_div__myPuJSWrap","_myPuJSWrap:",810,10,400,200,"blue");  
+			_myPuJSWrap = blo0.blMDiv(document.body,"id_div_myPuJSWrap","_PuJSWrap:",810,10,400,200,blColor[0]);  
 			var ld = blo0.blDiv(_myPuJSWrap,"id_div_pu_list","ld",blGrey[5]);
 			ld.board = _cchessBoard;
 			blo0.blScript("id_script_pu_list","pu/puList.js");
@@ -245,15 +245,24 @@ function _CtrlClass(){
 	};
 	this.blrLoadXdPu = function(b,d){  
 		if(_xdPuJSWrap==null){
-			_xdPuJSWrap = blo0.blMDiv(document.body,"id_div__XdPuWrap","_myPuJSWrap:",810,5,400,200,"green");  
+			_xdPuJSWrap = blo0.blMDiv(document.body,"id_div_xdPuWrap","_xdPuJSWrap:",810,5,400,200,blColor[1]);  
 			var ld = blo0.blDiv(_xdPuJSWrap,"id_div_xd_pu_list","ld",blGrey[5]);
 			ld.board = _cchessBoard;
 			blo0.blScript("id_script_xd_pu_list","pu/xdPuList.js");
 		}
 		_on_off_div(b,_xdPuJSWrap);
 	};
+	this.blrLoadZuowei1Pu = function(b,d){  
+		if(!d.v){
+			d.v = blo0.blMDiv(document.body,"id_div_zuowei1PuWrap","_zuowei1PuJSWrap:",810,5,400,200,blColor[2]);  
+			var ld = blo0.blDiv(d.v,"id_div_zuowei_1_pu_list","ld",blGrey[5]);
+			ld.board = _cchessBoard;
+			blo0.blScript("id_script_xd_pu_list","pu/zuowei1.js");
+		}
+		_on_off_div(b,d.v);
+	};
 	this.blhRun = function(){
-		var d = blo0.blMDiv(document.body,"id_div__CtrlClass","_CtrlClass:",680,50,400,200,"purple");  
+		var d = blo0.blMDiv(document.body,"id_div__CtrlClass","_CtrlClass:" + v,680,50,400,200,blGrey[0]);  
 		var dShowMe = blo0.blDiv(d,d.id+"dShowMe","dShowMe",blGrey[0]);
 		blo0.blShowObj2Div(dShowMe,this);
 		bl$("blrBoard0").click();
